code cleanup : 1